--- a/polymarkets_react_app/package.json
+++ b/polymarkets_react_app/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@syncfusion/ej2-react-charts": "^26.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "typescript": "^5.5.4"
   }
 }
